--- a/generators/microservice/templates/app/src/main/resources/application.properties
+++ b/generators/microservice/templates/app/src/main/resources/application.properties
@@ -1,6 +1,22 @@
-
+spring.application.name=<%= appName %>
 server.port=8080
-spring.flyway.locations=classpath:/db/migration/{vendor}
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+<%_ if (sql === true) { _%>
+spring.jpa.show-sql=true
+<%_ } _%>
+<%_ if (dbMigrationTool === 'flywaydb') { _%>
+spring.flyway.locations=classpath:/db/migration/{vendor}
+<%_ } _%>
+<%_ if (dbMigrationTool === 'liquibase') { _%>
+spring.liquibase.change-log=classpath:/db/migration/liquibase-changelog.xml
+<%_ } _%>
+<%_ if (configClient === true) { _%>
+spring.cloud.config.uri=http://localhost:8888
+<%_ } _%>
+<%_ if (eurekaClient === true) { _%>
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+<%_ } _%>
+<%_ if (distTracing === true) { _%>
+spring.zipkin.base-url=http://localhost:9411/
+spring.sleuth.sampler.probability=1
+<%_ } _%>
