--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/sivaprasadreddy/generator-springboot",
   "dependencies": {
     "chalk": "^2.4.2",
+    "lodash": "^4.17.15",
     "yeoman-generator": "^4.0.1"
   }
 }
