--- a/generators/microservice/templates/maven/pom.xml
+++ b/generators/microservice/templates/maven/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+        <problem-spring-web.version>0.25.0</problem-spring-web.version>
         <testcontainers.version>1.11.3</testcontainers.version>
         <swagger.version>2.9.2</swagger.version>
     </properties>
@@ -29,6 +30,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>problem-spring-web-starter</artifactId>
+            <version>${problem-spring-web.version}</version>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
