Generating docker-compose files for app, elk and monitoring

--- a/generators/microservice/templates/app/src/main/resources/application-docker.properties
+++ b/generators/microservice/templates/app/src/main/resources/application-docker.properties
@@ -11,7 +11,7 @@ spring.sleuth.sampler.probability=1
 
 <%_ if (databaseType === 'postgresql') { _%>
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://postgresdb:5432/appdb
+spring.datasource.url=jdbc:postgresql://postgresqldb:5432/appdb
 <%_ } _%>  
 <%_ if (databaseType === 'mysql') { _%>
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
