--- a/reference-apps/springboot-microservice/src/main/resources/application.properties
+++ b/reference-apps/springboot-microservice/src/main/resources/application.properties
@@ -3,3 +3,9 @@ server.port=8080
 
 spring.jpa.show-sql=true
 spring.flyway.locations=classpath:/db/migration/{vendor}
+
+application.logstash-host=localhost
+application.jwt.issuer=AppName
+application.jwt.header=Authorization
+application.jwt.expiresIn=604800
+application.jwt.secret=supersecret
