--- a/generators/microservice/templates/app/src/main/resources/application.properties
+++ b/generators/microservice/templates/app/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 
 <%_ if (sql === true) { _%>
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
 <%_ } _%>
 <%_ if (dbMigrationTool === 'flywaydb') { _%>
 spring.flyway.locations=classpath:/db/migration/{vendor}
