--- a/generators/server/templates/app/src/main/resources/application.properties
+++ b/generators/server/templates/app/src/main/resources/application.properties
@@ -11,6 +11,10 @@ logging.level.sql=INFO
 #logging.level.org.springframework.orm.jpa=DEBUG
 #logging.level.org.springframework.transaction=DEBUG
 #logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
+<%_ if (features.includes('localstack')) { _%>
+logging.level.com.amazonaws.util.EC2MetadataUtils=ERROR
+logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=ERROR
+<%_ } _%>
 
 ################ Actuator #####################
 management.endpoints.web.exposure.include=configprops,env,health,info,logfile,loggers
