--- a/generators/server/templates/app/src/main/resources/application-local.properties
+++ b/generators/server/templates/app/src/main/resources/application-local.properties
@@ -1,4 +1,3 @@
-
 <%_ if (databaseType === 'postgresql') { _%>
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/appdb
@@ -13,3 +12,14 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/appdb
 <%_ } _%>
 spring.datasource.username=siva
 spring.datasource.password=secret
+
+<%_ if (features.includes('localstack')) { _%>
+cloud.aws.region.use-default-aws-region-chain=false
+cloud.aws.credentials.use-default-aws-credentials-chain=false
+cloud.aws.stack.auto=false
+cloud.aws.region.auto=false
+cloud.aws.region.static=us-east-1
+
+application.endpoint-uri=http://localhost:4566
+application.region=us-east-1
+<%_ } _%>
